tests/spec/compile-fail/122_task_context_field.zn
// category: compile-fail
// profile: hosted
// purpose: TaskContext is task-local and cannot be stored in structure fields

module tests.fail.taskContextField;

struct SavedContext {
    ctx: TaskContext, // expected-error: TaskContext cannot be stored in structure fields
}
